--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "lib/protobuf-c"]
 	path = lib/protobuf-c
 	url = https://github.com/protobuf-c/protobuf-c.git
+[submodule "lib/rzg-fsp"]
+	path = lib/rzg-fsp
+	url = https://github.com/Vekatech/rzg-fsp.git
